name:           example
version:        0.0.0
build-type:     Simple
cabal-version:  >= 1.10

library
  hs-source-dirs: src
  exposed-modules: Lib
  build-depends: base, text
  default-language: Haskell2010

executable example-exe
  hs-source-dirs: exe
  main-is: Main.hs
  build-depends: base, text, example
  default-language: Haskell2010
